Almost at end. Going onto Risk Analysis -Annualize Std

--- a/Instructions/Starter_Code/test.ipynb
+++ b/Instructions/Starter_Code/test.ipynb
@@ -2261,7 +2261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2269,7 +2269,7 @@
     "\n",
     "\n",
     "\n",
-    "my_portfolio_return = my_portfolio.sort_index().pct_change() \n"
+    "my_portfolio_return = my_portfolio.sort_index()\n"
    ]
   },
   {
